Add custom bootstrap styles

--- a/src/layout.html
+++ b/src/layout.html
@@ -31,7 +31,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-icon"><img src ='./images/logo_iconAsset 3@3x.png' width="30px"></a>
+        <a class="navbar-icon"><img src ='./images/arctrade_logo.png' width="30px"></a>
         <a class="navbar-brand" href="#">arctrade</a>
       </div>
 
@@ -80,7 +80,7 @@
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><img src ='./images/mailAsset 2@3x.png' width="30px"></a></li>
+          <li><a href="#"><img src ='./images/mail_icon_notification.png' width="30px"></a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lee Chao <span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -352,8 +352,7 @@
               </div>
 
               <div class="modal-body">
-                <div>
-                </div>
+                <div class="col-lg-12">
                   <form id="newCustomer" method="post" class="form-horizontal">
                     <div class="form-group col-md-12 col-lg-12">
                       <div class="form-title">
@@ -362,33 +361,39 @@
                     </div>
                     <div class="form-group col-md-6 col-lg-4">
                       <label for="sel1">Business Type</label>
-                      <select class="form-control" id="sel1">
-                        <option class="placeholder" value="" disabled selected>Select</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                      </select>
+                      <div class="select-dropdown">
+                        <select class="form-control" id="sel1">
+                          <option class="placeholder" value="" disabled selected>Select</option>
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                          <option>4</option>
+                        </select>
+                      </div>
                     </div>
                     <div class="form-group col-md-6 col-lg-4">
                       <label for="sel1">Business Category</label>
-                      <select class="form-control" id="sel1">
-                        <option class="placeholder" value="" disabled selected>Select</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                      </select>
+                      <div class="select-dropdown">
+                        <select class="form-control" id="sel1">
+                          <option class="placeholder" value="" disabled selected>Select</option>
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                          <option>4</option>
+                        </select>
+                      </div>
                     </div>
                     <div class="form-group col-md-6 col-lg-4">
                       <label for="sel1">Corporation Form</label>
-                      <select class="form-control" id="sel1">
-                        <option class="placeholder" value="" disabled selected>Select</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                      </select>
+                      <div class="select-dropdown">
+                        <select class="form-control" id="sel1">
+                          <option class="placeholder" value="" disabled selected>Select</option>
+                          <option>1</option>
+                          <option>2</option>
+                          <option>3</option>
+                          <option>4</option>
+                        </select>
+                      </div>
                     </div>
                     <div class="form-group col-md-6 col-lg-4">
                       <label for="name">Name</label>
@@ -469,6 +474,8 @@
                       <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     </div>
                   </form>
+
+                </div>
               </div>
           </div>
       </div>
