Sectioned layout for issues

--- a/src/scenes/issue_detail.html
+++ b/src/scenes/issue_detail.html
@@ -197,28 +197,29 @@
     </div>
     <div class="component">
       <div class="component-header">
-        <h1>ID: 19328842</h1>
+        <h1>ID: 91209223</h1>
         <div class="component-buttons">
         <button data-toggle="modal" type="button" data-target="#myModal" class="btn btn-default">Edit</button>
         <button data-toggle="modal" type="button" data-target="#myModal" class="btn btn-default">Close Issue</button>
         </div>
       </div>
       <div class="component-body">
-        <div class="form-group col-sm-4 col-lg-3">
-          <label for="*******">Status</label>
-          <div class="status-label draft">Open</div>
-        </div>
-        <div class="form-group col-sm-4 col-lg-3">
-          <label for="*******">Customer</label>
-          <div class="status-label draft">Energy Company Inc.</div>
-        </div>
-        <div class="form-group col-sm-4 col-lg-6">
+        <div class="form-group col-sm-6 col-md-3 col-lg-3">
           <label for="*******">Title</label>
           <div class="status-label draft">Issue with account billing</div>
         </div>
         <div class="form-group col-md-12 col-lg-12">
           <label for="*******">Description</label>
           <div class="status-label draft">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce lobortis ornare vehicula. Pellentesque at quam id lacus consequat ullamcorper ut in eros. Maecenas ac volutpat nunc. Suspendisse ut eros erat. Nulla at ipsum lacinia ipsum tincidunt viverra. Praesent ipsum justo, pretium ac aliquet nec, ultricies at velit. Curabitur libero libero, convallis at congue sed, auctor eu dui. Integer gravida nisi ac suscipit consequat.</div>
+        </div>
+        <hr style="width: 100%">
+        <div class="form-group col-sm-6 col-md-3 col-lg-3">
+          <label for="*******">Status</label>
+          <div class="status-label draft">Open</div>
+        </div>
+        <div class="form-group col-sm-6 col-md-3 col-lg-3">
+          <label for="*******">Customer</label>
+          <div class="status-label draft">Energy Company Inc.</div>
         </div>
         <div class="form-group col-sm-6 col-md-3 col-lg-3">
           <label for="*******">Issue Type</label>
@@ -245,14 +246,14 @@
           <div class="status-label draft">Market Name</div>
         </div>
         <hr style="width: 100%">
-        <ul class="form-group col-sm-6 col-md-3">
+        <ul class="form-group col-sm-3 col-md-3">
           <label for="*******">Documents</label>
           <!-- <li class="list-group-item">No Files Uploaded</li> -->
           <li class="list-group-item">Financials.csv <i class="fa fa-download pull-right" aria-hidden="true"></i></li>
           <li class="list-group-item">Financials.csv <i class="fa fa-download pull-right" aria-hidden="true"></i></li>
           <li class="list-group-item">Financials.csv <i class="fa fa-download pull-right" aria-hidden="true"></i></li>
         </ul>
-        <div class="form-group col-md-6 col-lg-9">
+        <div class="form-group col-sm-9 col-md-9 col-lg-9">
           <label for="*******">Comments</label>
           <textarea class="form-control" rows="2"></textarea>
           <button style="float:right; margin-top:10px" data-toggle="" type="button" data-target="" class="btn btn-default">Add Comment</button>
